made the remove button active

--- a/quote/src/app/components/quotes/quotes.component.html
+++ b/quote/src/app/components/quotes/quotes.component.html
@@ -2,6 +2,6 @@
     <div class="quote" *ngFor="let quote of quotes; let i= index; ">
         <div class="id">{{i}}</div>
         <div class="content">{{quote.content}}</div>
-        <button class="delete">remove quote</button>
+        <button class="delete" (click)="deleteQuote(i)">remove quote</button>
     </div>
 </div>
